<resources>
    <string name="app_name">HeadHunter</string>
    <string name="error">Что-то пошло не так. Проверьте подключение к сети.</string>
    <string name="vacancy">Вакансия</string>
    <string name="vacancies">Все вакансии</string>
    <string name="hh_icon">hh_icon</string>
    <string name="find_vacancy">Найдите свою вакансию</string>
    <string name="choose_region">Выберите регион</string>
    <string name="find">Найти</string>
    <string name="error_regions">Не удалось загрузить список регионов</string>
    <string name="search_word">Введите слово для поиска</string>
    <string name="search_settings">Настроить поиск</string>
    <string name="experience">Опыт работы:</string>
    <string name="emailOrPhone">Email или телефон</string>
    <string name="password">Пароль</string>
    <string name="login">Войдите в аккаунт</string>
</resources>
